exports[`HitsPerPage applies translations 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      111
    </a>
  </li>
  <li
    className="item">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      333
    </a>
  </li>
  <li
    className="item">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      666
    </a>
  </li>
</ul>
`;

exports[`HitsPerPage supports passing number items 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      111
    </a>
  </li>
  <li
    className="item">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      333
    </a>
  </li>
  <li
    className="item">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      666
    </a>
  </li>
</ul>
`;

exports[`HitsPerPage supports passing object items 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      111 items
    </a>
  </li>
  <li
    className="item">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      333 items
    </a>
  </li>
  <li
    className="item">
    <a
      aria-label={undefined}
      className="itemLink"
      href="#"
      onClick={[Function]}>
      666 items
    </a>
  </li>
</ul>
`;
